# PECOS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .typos.toml  Cargo.toml  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  conda_environment.yml  dev_steps.md  development.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  venv_setup.md
crates/benchmarks/: Cargo.toml  README.md
crates/benchmarks/benches/: benchmarks.rs
crates/benchmarks/benches/modules/: element_ops.rs  hadamard_ops.rs  pauli_ops.rs  set_ops.rs
crates/benchmarks/src/: lib.rs
crates/pecos/: Cargo.toml
crates/pecos-core/: Cargo.toml  README.md
crates/pecos-core/src/: lib.rs  sets.rs  sims_rngs.rs
crates/pecos-core/src/sets/: element.rs  set.rs  uhashset.rs  uvecset.rs  vec_set.rs  vecsetfast.rs
crates/pecos-core/src/sims_rngs/: chacha_rng.rs  choices.rs  cyclic_rng.rs  mock_rng.rs  sim_rng.rs  xoshiro_rng.rs
crates/pecos-python/: Cargo.toml  README.md
crates/pecos-python/src/: lib.rs  sparse_sim.rs
crates/pecos-qec/: Cargo.toml  README.md
crates/pecos-qec/src/: lib.rs  main.rs  rot_surface.rs
crates/pecos-qec/src/rot_surface/: patch_layout.rs
crates/pecos-qsim/: Cargo.toml  README.md
crates/pecos-qsim/src/: arbitrary_rotation_gateable.rs  clifford_gateable.rs  clifford_simulator.rs  gens.rs  lib.rs  pauli_prop.rs  prelude.rs  quantum_simulator.rs  quantum_simulator_state.rs  sparse_stab.rs  state_vec.rs  statevec.rs
crates/pecos-sim/: Cargo.toml  _build.rs  build.rs
crates/pecos-sim/src/: cointoss.rs  lib.rs
crates/pecos-sim/src/paulifaultprop/: mod.rs  state.rs
crates/pecos/src/: lib.rs  prelude.rs
crates/pecos/tests/: wasm_compatibility.rs
cython/: .gitignore  Makefile  pyproject.toml  setup.py
cython/cypecos/: cysparsesim.pyx  cysparsesim_header.pxd
cython/cypecos/cysparsesim/: __init__.py  cysparsesim.pyx  cysparsesim_header.pxd  logical_sign.py  sparsesim.cpp  sparsesim.h
cython/cypecos/cysparsesim/src/: logical_sign.py
cython/cysparsesim/: __init__.py  cysparsesim.pyx  sparsesim.h
cython/setups/: setup.py
python/: Cargo.toml  Makefile  NOTICE  pyproject.toml  pytest.ini  requirements-lint.txt  requirements.txt
python/cython/: README.md  setup.py
python/cython/cypecos/cysparsesim/: __init__.py  cysparsesim.pyx
python/docs/: Makefile  README.md  change_log.rst  conf.py  index.rst  install.rst  requirements.txt
python/docs/_static/: custom.css  mathconf.js
python/docs/api_guide/: circuit_runners.rst  decoders.rst  error_generators.rst  logical_circuits.rst  qeccs.rst  quantum_circuits.rst  simulators.rst  standard_gates.rst  tools.rst
python/docs/development/: index.rst  simulators.rst
python/docs/examples/: creating_qecc_class.rst  monte_carlo_script.rst
python/docs/reference/: index.rst
python/docs/reference/_autosummary/: pecos.circuit_converters.checks2circuit.rst  pecos.circuit_converters.rst  pecos.circuit_converters.std2chs.rst  pecos.circuits.hyqc.conditionals.rst  pecos.circuits.hyqc.cops.rst  pecos.circuits.hyqc.fund.rst  pecos.circuits.hyqc.hyqc.rst  pecos.circuits.hyqc.int.rst  pecos.circuits.hyqc.misc_stmts.rst  pecos.circuits.hyqc.qops.rst  pecos.circuits.hyqc.qubits.rst  pecos.circuits.hyqc.rst  pecos.circuits.hyqc.vars.rst  pecos.circuits.logical_circuit.rst  pecos.circuits.qasm.barrier.rst  pecos.circuits.qasm.block.rst  pecos.circuits.qasm.rst  (+174 more)
python/pecos/: __init__.py  errors.py  typed_list.py
python/pecos-rslib/: README.md  pyproject.toml
python/pecos/circuit_converters/: __init__.py  checks2circuit.py  std2chs.py
python/pecos/circuits/: __init__.py  logical_circuit.py  qc2phir.py  quantum_circuit.py
python/pecos/classical_interpreters/: __init__.py  classical_interpreter_abc.py  phir_classical_interpreter.py
python/pecos/decoders/: __init__.py
python/pecos/engines/: hybrid_engine.py  hybrid_engine_multiprocessing.py  hybrid_engine_old.py
python/pecos/error_models/: __init__.py  class_errors_circuit.py  depolarizing_error_model.py  error_depolar.py  error_model.py  error_model_abc.py  fake_error_model.py  generic_error_model.py  parent_class_error_gen.py  simple_depolarizing_error_model.py
python/pecos/foreign_objects/: foreign_object_abc.py  object_pool.py  python.py  wasm_execution_timer_thread.py  wasmer.py  wasmtime.py
python/pecos/machines/: generic_machine.py  machine_abc.py
python/pecos/misc/: __init__.py  commute.py  errors.py  gate_groups.py  stabilizer_funcs.py  std_ouput.py  symbol_library.py  threshold_curve.py
python/pecos/op_processors/: generic_op_processor.py  op_processor_abc.py
python/pecos/qeccs/: __init__.py  gate_parent_class.py  helper_functions.py  instruction_parent_class.py  plot.py  qecc_parent_class.py
python/pecos/rewrite/: find_cliffs.py
python/pecos/simulators/: __init__.py  compile_cython.py  gate_syms.py  parent_sim_classes.py  quantum_simulator.py  sim_class_types.py
python/pecos/slr/: __init__.py  block.py  cond_block.py  cops.py  fund.py  misc.py  slr.py  slr_converter.py  vars.py
python/pecos/tools/: __init__.py  fault_tolerance_checking.py  fault_tolerance_checks.py  find_cliffs.py  logic_circuit_speed.py  pseudo_threshold_tools.py  random_circuit_speed.py  stabilizer_verification.py  threshold_tools.py  tool_anticommute.py  tool_collection.py
python/pypecos/: Cargo.toml  MANIFEST.in  Makefile  pyproject.toml  requirements.txt
python/pypecos-cylib/: Makefile  pyproject.toml  setup.py
python/pypecos-cylib/pypecos_cylib/: __init__.py
python/pypecos-cysim/: .gitignore  pyproject.toml  setup.py
python/pypecos-rslib/: Cargo.toml  MANIFEST.in  NOTICE  pyproject.toml  requirements.txt
python/pypecos-rslib/pypecos_rslib/: __init__.py
python/pypecos-rslib/src/: lib.rs
python/pypecos/pypecos/: __init__.py
python/quantum-pecos/: pyproject.toml  requirements.txt
python/quantum-pecos/pecos/: __init__.py
python/src/: lib.rs  sim.rs
python/tests/: pytest.ini
python/tests/integration/: test_phir.py  test_phir_setting_cregs.py  test_random_circuits.py
python/tests/unit/: test_blocks.py
(+1560 files in other folders)
