# Copyright 2024 The PECOS Developers
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License.You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.

[workspace]
resolver = "2"
members = [
    "crates/*",
    "python/pypecos-rslib",
]
default-members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
authors = [
    "The PECOS Developers",
    "Ciaran Ryan-Anderson<ciaranra@gmail.com>",
]
edition = "2021"
homepage = "https://pecos.io"
repository = "https://github.com/PECOS-packages/PECOS"
license = "Apache-2.0"

[workspace.dependencies]
pyo3 = "0.20"

pecos = { version = "0.1.0", path="crates/pecos"}
pecos-sim = { version = "0.1.0", path = "crates/pecos-sim"}
pecos-cli = { version = "0.1.0", path="crates/pecos-cli"}

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 8
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
