[workspace]
resolver = "2"
members = [
    "crates/pecos*",
    "crates/benchmarks",
    # "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [
    "The PECOS Developers",
    "Ciaran Ryan-Anderson<ciaranra@gmail.com>",
]
homepage = "https://pecos.io"
repository = "https://github.com/PECOS-packages/PECOS"
license = "Apache-2.0"
keywords = ["scientific", "quantum", "QEC"]
categories = ["science", "simulation"]

[workspace.dependencies]
pyo3 = "0.22"
rand = "0.8"
rand_chacha = "0.3"
rand_xoshiro = "0.6"

[profile.release]
codegen-units = 1
lto = "fat"

[workspace.lints.clippy]
# For more details see: https://doc.rust-lang.org/clippy/lints.html
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
# restriction = "warn"
cargo = "warn"
