[workspace]
resolver = "2"
members = [
    "crates/pecos*",
    "crates/benchmarks",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = [
    "The PECOS Developers",
    "Ciaran Ryan-Anderson<ciaranra@gmail.com>",
]
homepage = "https://pecos.io"
repository = "https://github.com/PECOS-packages/PECOS"
license = "Apache-2.0"
keywords = ["scientific", "quantum", "QEC"]
categories = ["science", "simulation"]

[workspace.dependencies]
pyo3 = "0.23"
rand = "0.8"
rand_chacha = "0.3"
rand_xoshiro = "0.6"

pecos-core = { version = "0.1.1", path = "crates/pecos-core" }
pecos-qsim = { version = "0.1.1", path = "crates/pecos-qsim" }
pecos-qec = { version = "0.1.1", path = "crates/pecos-qec" }
pecos = { version = "0.1.1", path = "crates/pecos" }
pecos-python = { version = "0.1.1", path = "crates/pecos-python" }

[profile.release]
codegen-units = 1
lto = "fat"

[workspace.lints.clippy]
# For more details see: https://doc.rust-lang.org/clippy/lints.html
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
# restriction = "warn"
cargo = "warn"
