# Copyright 2023 The PECOS Developers
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License.You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.

[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-pecos"
version = "0.6.0.dev5"
authors = [
    {name = "The PECOS Developers"},
]
maintainers =[
    {name = "Ciaran Ryan-Anderson", email = "ciaran.ryan-anderson@quantinuum.com"},
]
description = """PECOS is a library/framework for the evaluation, study, and design of QEC protocols. It also provides the ability to study and evaluate the performance advanced hybrid quantum/classical compute execution models for NISQ algorithms and beyond."""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE"}
keywords = ["quantum", "QEC", "simulation", "PECOS"]
dependencies = [
    "phir>=0.3.3,<0.4",
    "numpy>=1.15.0,<2.0",
    "scipy>=1.1.0,<2.0",
    "networkx>=2.1.0,<3.0",
    "matplotlib>=2.2.0,<4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
documentation = "https://quantum-pecos.readthedocs.io"
repository = "https://github.com/PECOS-packages/PECOS"

[project.optional-dependencies]
simulators = [
    "cython",
    "pybind11>=2.2.3,<3.0",
    "projectq>=0.5.0,<0.9.0",
    "qulacs>=0.6.4",
    "pyquest>=0.0.1",
]
cuda = [
    "cuquantum-python>=24.03.0",
    "custatevec>=1.6.0",
    "cupy>=10.4.0",
    "pytket-cutensornet>=0.7.0",
]
wasmtime = [
    "wasmtime>=13.0"
]
wasmer = [
    "wasmer~=1.1.0",
    "wasmer_compiler_cranelift~=1.1.0",
]
visualization = [
    "plotly~=5.9.0",
]
tests = [
    "pytest>=5.0.0",
    "hypothesis"
]
all = [
    "quantum-pecos[simulators]",
    "quantum-pecos[wasmtime]",
    "quantum-pecos[wasmer]",
    "quantum-pecos[visualization]",
    "quantum-pecos[tests]",
]

[tool.distutils.build_ext]
inplace = 1

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
zip-safe = false
package-dir = {"" = "python"}
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["python"]
include = ["pecos*"]
namespaces = true

[tool.setuptools.package-data]
"pecos" = ["py.typed"]

# Linting and autorefactoring tools
# ---------------------------------

[tool.black]
line-length = 120
extend-exclude = "python/pecos/simulators/cuquantum_old/*"
