[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "cypecos"
version = "0.1.0"
description = "C++/Cython extensions for Python PECOS."

[tool.setuptools]
packages = ["cypecos", "cypecos.cysparsesim"]

# testing
# -------
[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    # By default, run fast tests and only tests using required dependencies. To run all tests: pytest -m ""
    # -m not slow and not optional_dependency
    "-m not optional_dependency",
]

testpaths = ["tests"]
markers = [
    # slow: mark test as slow.
    "optional_dependency: mark a test as using one or more optional dependencies.",
    "optional_unix: mark tests as using an optional dependency that only work with Unix-based systems.",
]

filterwarnings = [
    "ignore::DeprecationWarning:dateutil.tz.tz.*",
]


# Linting and autorefactoring tools
# ---------------------------------

# Ruff
# ....
# Define rules, plugins, and configurations for the ruff linter.
# For more details on rules see: https://docs.astral.sh/ruff/rules
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # imported but unused (81)
"**/tests/**/*.py"         = [
    "INP001",                       # File is part of an implicit namespace package. Add an `__init__.py` (6)
    "S101",                         # Use of `assert` detected (78)
    ]
