# Copyright 2023 The PECOS Developers
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License.You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.

[build-system]
requires = ["maturin>=1.3.2,<2.0"]
build-backend = "maturin"

[project]
name = "quantum-pecos"
version = "0.5.0.dev9+rust"
authors = [
    {name = "The PECOS Developers"},
    {name = "Ciaran Ryan-Anderson", email = "ciaranra@gmail.com"},
]
maintainers =[
    {name = "Ciaran Ryan-Anderson", email = "ciaranra@gmail.com"},
]
description = """PECOS is a library/framework for the evaluation, study, and design of QEC protocols. It also provides the ability to study and evaluate the performance advanced hybrid quantum/classical compute execution models for NISQ algorithms and beyond."""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE"}
keywords = ["quantum", "QEC", "simulation", "PECOS"]
dependencies = [
    "phir~=0.3.0",
    "numpy>=1.15.0,<2.0",
    "scipy>=1.1.0,<2.0",
    "networkx>=2.1.0,<3.0",
    "matplotlib>=2.2.0,<4.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://pecos.io"
Documentation = "https://quantum-pecos.readthedocs.io"
Repository = "https://github.com/PECOS-packages/PECOS"

[project.optional-dependencies]
simulators = [
    "cython",
    "pybind11>=2.2.3,<3.0",
    "projectq>=0.5.0,<0.9.0",
]
wasmtime = [
    "wasmtime>=13.0"
]
wasmer = [
    "wasmer>=1.1.0",
    "wasmer_compiler_cranelift>=1.1.0",
]
visualization = [
    "plotly>=5.9.0",
]
lint = [
    "mypy>=1.0",
    "ruff>=0.2.0",
    "black>=23.0",
    "typos>=1.0",
]
tests = [
    "pytest>=5.0.0"
]
all = [
    "quantum-pecos[simulators]",
    "quantum-pecos[wasmtime]",
    "quantum-pecos[wasmer]",
    "quantum-pecos[visualization]",
    "quantum-pecos[tests]",
    "quantum-pecos[lint]",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pecos.pyo3pecos"
python-source = "."

# testing
# -------
[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    # By default, run fast tests and only tests using required dependencies. To run all tests: pytest -m ""
    # -m not slow and not optional_dependency
    "-m not optional_dependency",
]

testpaths = ["tests"]
markers = [
    # slow: mark test as slow.
    "optional_dependency: mark a test as using one or more optional dependencies.",
    "optional_unix: mark tests as using an optional dependency that only work with Unix-based systems.",
    "wasmer: mark test as using the 'wasmer' option.",
    "wasmtime: mark test as using the 'wasmtime' option.",
]

# ProjectQ has a bunch of deprecation warnings from NumPy because they still use np.matrix instead of np.array
# TODO: comment this to deal with ProjectQ gate warnings
filterwarnings = [
    "ignore::PendingDeprecationWarning:projectq.ops._gates",
    "ignore::DeprecationWarning:dateutil.tz.tz.*",
]


# Linting and autorefactoring tools
# ---------------------------------

# Ruff
# ....
# Define rules, plugins, and configurations for the ruff linter.
# For more details on rules see: https://docs.astral.sh/ruff/rules
[tool.ruff]
line-length = 120
indent-width = 4
fix = true
target-version = "py312"
extend-exclude = ["pecos/simulators/cuquantum/*"]


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # imported but unused (81)
"**/tests/**/*.py" = [
    "INP001",                       # File is part of an implicit namespace package. Add an `__init__.py` (6)
    "S101",                         # Use of `assert` detected (78)
]
# TODO: comment to work on better typing
"pecos/circuit_converters/**/*.py" = ["ANN"]
"pecos/circuits/**/*.py" = ["ANN"]
"pecos/decoders/**/*.py" = ["ANN"]
"pecos/engines/**/*.py" = ["ANN"]
"pecos/error_models/**/*.py" = ["ANN"]
"pecos/misc/**/*.py" = ["ANN"]
"pecos/qeccs/**/*.py" = ["ANN"]
"pecos/simulators/**/*.py" = ["ANN"]
"pecos/tools/*.py" = ["ANN"]
