[package]
name = "pecos-sim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cc = "1.0"
