# Copyright 2024 The PECOS Developers
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License.You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.

[build-system]
requires = ["maturin>=1.3.2,<2.0"]
build-backend = "maturin"

[project]
name = "pypecos-rslib"
version = "0.5.0.dev9+rust"
authors = [
    {name = "The PECOS Developers"},
    {name = "Ciaran Ryan-Anderson", email = "ciaranra@gmail.com"},
]
maintainers =[
    {name = "Ciaran Ryan-Anderson", email = "ciaran.ryan-anderson@quantinuum.com"},
]
description = """Rust library extension of PyPECOS."""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE"}
keywords = ["quantum", "QEC", "simulation", "PECOS"]
dependencies = [
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://pecos.io"
Documentation = "https://quantum-pecos.readthedocs.io"
Repository = "https://github.com/PECOS-packages/PECOS"

[project.optional-dependencies]
lint = [
    "mypy>=1.0",
    "ruff>=0.2.0",
    "black>=23.0",
    "typos>=1.0",
]
tests = [
    "pytest>=5.0.0"
]
all = [
    "pypecos-rslib[lint]",
    "pypecos-rslib[tests]",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pypecos_rslib.rslib"
python-source = "."

# testing
# -------
[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    # By default, run fast tests and only tests using required dependencies. To run all tests: pytest -m ""
    # -m not slow and not optional_dependency
    "-m not optional_dependency",
]

testpaths = ["tests"]
markers = [
    # slow: mark test as slow.
    "optional_dependency: mark a test as using one or more optional dependencies.",
]

filterwarnings = [
]
